--- a/Parcial_1/resources/style.css
+++ b/Parcial_1/resources/style.css
@@ -2,6 +2,8 @@ body{
     font-size: 16px;
     background: rgb(235, 192, 195);
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url("/resources/pexels-kovyrina-937980.jpg");
+
 }
 ::selection {
     color: rgb(250, 5, 21);
@@ -43,4 +45,44 @@ footer {
     padding: 20px;
     background: rgba(0, 0, 0, 0.7);
     color: white;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    width: 200px;
+    height: 150px;
+    background-color: #f0f0f0;
+    margin: 10px;
+}
+
+.centrar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cuadros {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.html_content {
+    background: white;
+    border-top: 5px solid #62dada;
+}
+
+.text {
+    font-weight: 200;
+    font-style: normal;
+}
+
+.logocontent {
+    padding-right: 0;
+    padding-left: 80%;
 }
