--- a/Parcial_1/resources/style.css
+++ b/Parcial_1/resources/style.css
@@ -82,15 +82,17 @@ footer {
     margin-top: 10px;
     background: rgb(32, 169, 187, 0.5);
     border-top: 5px solid #fc9b1d;
-    border-bottom: 5px solid #ffffff;
     color: #ffffff;
+    box-shadow: 15px -15px 15px rgba(255, 255, 255, 0.651);;
+
 }
 
 .tcp_ip_content {
     background: rgb(184, 54, 54, 0.5);
     border-top: 5px solid #0aa5ff;
-    border-bottom: 5px solid #ffffff;
     color: #ffffff;
+    box-shadow: 10px -10px 10px rgba(255, 255, 255, 0.8);;
+
 }
 
 .dns_content {
@@ -98,7 +100,31 @@ footer {
     border-top: 5px solid #ff1c1c;
     border-bottom: 5px solid #ffffff;
     color: #ffffff;
+    box-shadow: 10px -10px 10px rgba(255, 255, 255, 0.8);;
+
 }
+
+
+.dns_content, .tcp_ip_content {
+    width: 33%;
+    padding: 20px;
+    margin: 0 10px;
+    text-align: left;
+    box-sizing: border-box;
+    border-radius: 10px;
+    box-shadow: 10px -10px 10px rgba(255, 255, 255, 0.8);;
+}
+
+.css_content, .html_content {
+    width: 100%;
+    text-align: left;
+    box-sizing: border-box;
+    padding: 10px;
+    margin: 0 10px;
+    border-radius: 10px;
+    box-shadow: 10px -10px 10px rgba(255, 255, 255, 0.8);;
+}
+
 
 .text {
     font-weight: 200;
