--- a/Parcial_1/resources/style.css
+++ b/Parcial_1/resources/style.css
@@ -1,7 +1,7 @@
 body{
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("/resources/pexels-kovyrina-937980.jpg");
+    background-image: url("/resources//img/pexels-kovyrina-937980.jpg");
     background-size: cover;
 
 
@@ -41,6 +41,13 @@ nav ul li{
 .sub_header{
     text-align: center;
     color:#fc9b1d
+}
+
+h2 {
+    color: rgba(255, 127, 127, 0.856); 
+    font-size:medium;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 h3 {
@@ -134,6 +141,15 @@ footer {
 .logocontent {
     padding-right: 0;
     padding-left: 80%;
+}
+
+.logo {
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .vertical {
