--- a/Parcial_1/resources/HTML.css
+++ b/Parcial_1/resources/HTML.css
@@ -1,3 +1,46 @@
+body{
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: url("/resources//img/pexels-kovyrina-937980.jpg");
+    background-size: cover;
+
+
+}
+::selection {
+    color: rgb(250, 5, 21);
+    background-color: rgb(0, 0, 0);
+}
+
+header{
+    height: 100px;
+    width: 100%;
+    margin: 0px;
+    text-align: center;
+    line-height: 100px;
+    color: rgba(255, 255, 255, 0.651);
+    text-shadow: 5px -5px 5px rgba(255, 255, 255, 0.651);;
+}
+
+h2 {
+    color: rgba(255, 127, 127, 0.856); 
+    font-size:medium;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+h3 {
+    color: rgb(255, 72, 0);
+}
+
+.html_content {
+    background: rgb(255, 149, 237, 0.5);
+    border-top: 5px solid #ff1515;
+    color: #ffffff;
+    box-shadow: 15px 15px 15px 15px rgba(255, 255, 255, 0.651);;
+
+}
+
+
 footer {
     text-align: center;
     padding: 20px;
