--- a/Parcial_1/resources/CSS.css
+++ b/Parcial_1/resources/CSS.css
@@ -1,5 +1,5 @@
 body{
-    font-size: 16px;
+    font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
     background-image: url("/resources//img/pexels-kovyrina-937980.jpg");
     background-size: cover;
@@ -53,6 +53,7 @@ h2 {
 }
 
 h3 {
+    font-size: 25px;
     color: rgb(255, 72, 0);
 }
 
@@ -77,9 +78,9 @@ h3 {
 .css_content {
     margin-top: 10px;
     background: rgb(32, 169, 187, 0.5);
-    border-top: 5px solid #fc9b1d;
+    border-top: 5px solid #1d85fc;
     color: #ffffff;
-    box-shadow: 15px -15px -15px -15px rgba(255, 255, 255, 0.651);;
+    box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.8);;
 
 }
 
@@ -102,7 +103,7 @@ h3 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 70%;
+    width: 90%;
     padding: 10px;
     margin: 30 10px;
 }
