--- a/Parcial_1/resources/style.css
+++ b/Parcial_1/resources/style.css
@@ -1,5 +1,5 @@
 body{
-    font-size: 16px;
+    font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
     background-image: url("/resources//img/pexels-kovyrina-937980.jpg");
     background-size: cover;
@@ -83,6 +83,7 @@ footer {
 }
 
 .html_content {
+    margin-top: 10px;
     background: rgb(255, 149, 237, 0.5);
     border-top: 5px solid #ff1515;
     color: #ffffff;
@@ -100,6 +101,7 @@ footer {
 }
 
 .tcp_ip_content {
+    margin-top: 10px;
     background: rgb(184, 54, 54, 0.5);
     border-top: 5px solid #0aa5ff;
     color: #ffffff;
@@ -108,6 +110,7 @@ footer {
 }
 
 .dns_content {
+    margin-top: 10px;
     background: rgb(255, 247, 247, 0.5);
     border-top: 5px solid #ff1c1c;
     color: #ffffff;
