--- a/Parcial_1/resources/CSS.css
+++ b/Parcial_1/resources/CSS.css
@@ -2,8 +2,9 @@ body{
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
     background-image: url("/resources//img/pexels-kovyrina-937980.jpg");
-    background-size: cover;
-
+    background-repeat: repeat;
+    background-size: calc(100% / 3) auto;
+    background-position: center;
 
 }
 ::selection {
@@ -12,6 +13,7 @@ body{
 }
 
 header{
+    font-size: 17px;
     height: 100px;
     width: 100%;
     margin: 0px;
@@ -45,11 +47,13 @@ nav ul li a{
 nav ul li a:hover {
     color: #ccc;
 }
+
 h2 {
-    color: rgba(255, 127, 127, 0.856); 
-    font-size:medium;
+    color: rgba(255, 151, 151, 0.856); 
+    font-size: 20px;
     text-align: center;
     text-transform: uppercase;
+    margin-top: -20px;
 }
 
 h3 {
@@ -77,7 +81,7 @@ h3 {
 
 .css_content {
     margin-top: 10px;
-    background: rgb(32, 169, 187, 0.5);
+    background: rgba(223, 60, 60, 0.5);
     border-top: 5px solid #1d85fc;
     color: #ffffff;
     box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.8);;
