--- a/Parcial_1/resources/style.css
+++ b/Parcial_1/resources/style.css
@@ -2,8 +2,9 @@ body{
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
     background-image: url("/resources//img/pexels-kovyrina-937980.jpg");
-    background-size: cover;
-
+    background-repeat: repeat;
+    background-size: calc(100% / 3);
+    background-position: center;
 
 }
 ::selection {
@@ -12,6 +13,7 @@ body{
 }
 
 header{
+    font-size: 17px;
     height: 100px;
     width: 100%;
     margin: 0px;
@@ -47,13 +49,14 @@ nav ul li a:hover {
 }
 
 h2 {
-    color: rgba(255, 127, 127, 0.856); 
-    font-size:medium;
+    color: rgba(255, 151, 151, 0.856); 
+    font-size: 20px;
     text-align: center;
     text-transform: uppercase;
+    margin-top: -20px;
 }
-
 h3 {
+    font-size: 22px;
     color: rgb(255, 72, 0);
 }
 
@@ -84,10 +87,10 @@ footer {
 
 .html_content {
     margin-top: 10px;
-    background: rgb(255, 149, 237, 0.5);
-    border-top: 5px solid #ff1515;
+    background: rgba(218, 125, 255, 0.5);
+    border-top: 5px solid #ff158a;
     color: #ffffff;
-    box-shadow: 15px 15px 15px 15px rgba(255, 255, 255, 0.651);;
+    box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.8);
 
 }
 
@@ -96,7 +99,7 @@ footer {
     background: rgb(32, 169, 187, 0.5);
     border-top: 5px solid #fc9b1d;
     color: #ffffff;
-    box-shadow: 15px -15px -15px -15px rgba(255, 255, 255, 0.651);;
+    box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.8);;
 
 }
 
@@ -105,7 +108,7 @@ footer {
     background: rgb(184, 54, 54, 0.5);
     border-top: 5px solid #0aa5ff;
     color: #ffffff;
-    box-shadow: 10px -10px 10px rgba(255, 255, 255, 0.8);;
+    box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.8);;
 
 }
 
@@ -114,7 +117,7 @@ footer {
     background: rgb(255, 247, 247, 0.5);
     border-top: 5px solid #ff1c1c;
     color: #ffffff;
-    box-shadow: 10px -10px 10px rgba(255, 255, 255, 0.8);;
+    box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.8);;
 
 }
 
@@ -164,9 +167,9 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 33%;
+    width: 36%;
     padding: 10px;
-    margin: 30 10px;
+    margin: 25 15px;
 }
 
 
