--- a/Parcial_1/resources/HTML.css
+++ b/Parcial_1/resources/HTML.css
@@ -20,7 +20,7 @@ header{
     text-align: center;
     line-height: 100px;
     color: rgba(255, 255, 255, 0.7);
-    text-shadow: 5px -5px 5px rgba(255, 255, 255, 0.7);;
+    text-shadow: 4px -4px 4px rgba(255, 255, 255, 0.6);;
 }
 
 nav{
@@ -90,12 +90,12 @@ h3 {
 
 .logocontent {
     padding-right: 0;
-    padding-left: 80%;
+    padding-left: 95%;
 }
 
 .logo {
-    width: 70px;
-    height: 70px;
+    width: 48px;
+    height: 55px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -114,6 +114,7 @@ h3 {
 
 
 footer {
+    font-size: 15px;
     text-align: center;
     padding: 20px;
     background: rgba(0, 0, 0, 0.7);
