--- a/Parcial_1/resources/style.css
+++ b/Parcial_1/resources/style.css
@@ -113,7 +113,7 @@ footer {
 .dns_content, .tcp_ip_content {
     width: 33%;
     padding: 20px;
-    margin: 0 10px;
+    margin: 10px;
     text-align: left;
     box-sizing: border-box;
     border-radius: 15px;
@@ -125,7 +125,7 @@ footer {
     text-align: left;
     box-sizing: border-box;
     padding: 10px;
-    margin: 0 10px;
+    margin: 10px;
     border-radius: 15px;
     box-shadow: 4px 4px 4px 4px rgba(255, 255, 255, 0.8);
 }
