--- a/Parcial_1/resources/style.css
+++ b/Parcial_1/resources/style.css
@@ -33,13 +33,18 @@ nav{
 nav ul {
     list-style: none;
     margin-bottom: 20px;
+    margin-top: -34px;
+
+
 }
 
 nav ul li a{
+    font-size: 15px;
     float: right;
     list-style: none;
     padding: 10px;
     color: rgb(194, 128, 67);
+    margin-top: 20px;
 }
 
 
