--- a/Parcial_2/resources/styles.css
+++ b/Parcial_2/resources/styles.css
@@ -7,3 +7,20 @@ body {
     flex-wrap: wrap;
     gap: 15px;
 }
+
+.user {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    display: inline-block;
+    width: 200px;
+    text-align: center;
+}
+
+.user img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
