--- a/Proyecto_Final/Codigo/styles.css
+++ b/Proyecto_Final/Codigo/styles.css
@@ -9,7 +9,7 @@ body {
 header {
     background-color: #008080;
     font-size: 30px;
-
+    position: inherit;
     color: white;
     padding: 20px;
     text-align: center;
@@ -54,13 +54,48 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
-    position: fixed;
     bottom: 0;
     width: 100%;
 }
 
+.container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin: 20px auto;
+    padding: 20px;
+    max-width: 1200px;
+}
 
-/* Estilos del calendario */
+.info-box {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.img-box img {
+    padding: 20px;
+    width: 100%;
+    height: auto;
+}
+
+.btn {
+    background-color: #008080;
+    color: white;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.btn:hover {
+    background-color: #005959;
+}
+
 .calendar {
     width: 100%;
     max-width: 600px;
@@ -72,11 +107,17 @@ footer {
 }
 
 .calendar__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px;
     background-color: #008080;
     color: white;
     font-weight: bold;
-    text-align: center;
+}
+
+.calendar__prev, .calendar__next {
+    cursor: pointer;
 }
 
 .calendar__week, .calendar__dates {
