--- a/Proyecto_Final/Codigo/resources/styles.css
+++ b/Proyecto_Final/Codigo/resources/styles.css
@@ -139,3 +139,36 @@ footer {
 .calendar__last-days {
     color: #ccc;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+ * Always set the map height explicitly to define the size of the div element
+ * that contains the map. 
+ */
+ #map {
+    height: 100%;
+  }
+  
+  /* 
+   * Optional: Makes the sample page fill the window. 
+   */
+  html,
+  body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
