correciion de algunos links

--- a/Proyecto_Final/Codigo/resources/styles.css
+++ b/Proyecto_Final/Codigo/resources/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-image: url('/Codigo/resources/img/Header.webp');
+    background-image: url('/resources/img/Header.webp');
     background-size:cover;
     font-size: 30px;
     color: white;
