--- a/Proyecto_Final/Codigo/app/resources/styles.css
+++ b/Proyecto_Final/Codigo/app/resources/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-image: url('/resources/img/Header.webp');
+    background-image: url('../resources/img/Header.webp');
     background-size:cover;
     font-size: 30px;
     color: white;
